# oh-my-jeo

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  DESIGN.md  INSTALL_FOR_AGENTS.md  NOTICE  README.md  SECURITY.md  SUPPORT.md  install.sh  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: ci.yml  pages.yml
docs/: APPLICATION_CASES.md  ARCHITECTURE.md  CAPABILITIES.md  CHAT_WRAPPER_EXAMPLES.md  CODEGRAPH.md  DELEGATION_FIRST_COMPLETENESS.md  DIRECTION.md  HARNESS_QUALITY.md  HERMES_AGENT_INTEGRATION_RUNBOOK.md  INSTALLATION.md  MEMORY.md  MEMORY_CONTEXT.md  OH_MY_JEO_AGENT_SPEC.md  ORCHESTRATION_PATTERNS.md  PARITY.md  PLAYBOOKS.md  PROVIDER_AUTH.md  README.md  RELEASE.md  ROADMAP.md  ROLES.md  SKILL_QUALITY_COMPARISON.md  WORKFLOWS.md  WORKFLOW_PIPELINE.md
examples/: discord-bot-runtime-flow.md  hermes-config.yaml  wrapper_shim_common.py
examples/hermes-ops/: scheduled-competitor-digest.json
examples/research-department/: README.md
examples/use-cases/: g1-g10-demo-cards.json
examples/wrapper-events/: discord-route-hint-visual.json  discord-workflow-catalog.json  (+1 more)
omh/: __init__.py
omj/: __init__.py
roles/: guide.md  handoff-guide.md  memory-keeper.md  planner.md  tracker.md
site/: index.html  styles.css
site/docs/: index.html
tests/: _cli_harness.py  _local_package.py  test_application_cases.py  test_architecture_layout.py  test_capabilities.py  test_catalog_questions.py  test_chat_progress_reporting.py  test_chat_router.py  test_cli.py  test_codegraph.py  test_codex_progress.py  test_coding_lifecycle.py  test_config_adapter.py  test_context_brief_coverage.py  test_context_safety.py  test_demo.py  test_efficiency.py  test_executor_progress_binding.py  test_executor_progress_projection.py  test_goal_ledger.py  test_hermes_bootstrap.py  test_hook_manifest.py  test_hud.py  test_isolation.py  test_keyword_manifest.py  test_loop_cycle.py  test_materials.py  test_mcp_bridge.py  test_memory.py  test_menubar_app.py  test_menubar_status.py  test_omj_namespace.py  test_operations_artifacts.py  test_operator_productivity.py  test_orchestration_patterns.py  test_paper_learning.py  test_plugin_capabilities.py  test_plugin_distribution.py  test_plugin_observations.py  test_plugin_runtime_autoobserve.py  (+18 more)
(+208 files in other folders)
